<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/tictactoeimage"
    tools:context=".BluetoothConnection">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        app:cardCornerRadius="@dimen/_30sdp"
        app:cardElevation="@dimen/_15sdp">

        <LinearLayout
            android:id="@+id/DisplayCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_20sdp">

            <Button
                android:id="@+id/ConnectDevices"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/SearchDevices"
                android:textColor="@color/Lavender2"
                android:textSize="@dimen/_11sdp"
                app:cornerRadius="@dimen/_20sdp" />

            <TextView
                android:id="@+id/Searchtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textAlignment="center"
                android:visibility="gone"/>


            <ListView
                android:id="@+id/ListOfDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/InputName2"
                android:layout_width="@dimen/_115sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/border2"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_7sdp"
                android:maxLines="1"
                android:textStyle="italic"
                android:hint="@string/NameHintMessage2"
                android:textColor="@color/Lavender2"
                android:visibility="gone"/>

            <Button
                android:id="@+id/StartPlayerButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/StartButtonName"
                android:textSize="@dimen/_11sdp"
                app:cornerRadius="@dimen/_20sdp"
                android:visibility="gone"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>